# rust-simdop

./: .travis.yml  Cargo.toml  README.md  search-index.js
implementors/simdop/: trait.Sign.js
simdop/: index.html  sidebar-items.js  trait.Abs.html  trait.Add.html  trait.AddS.html  trait.CmpEq.html  trait.CmpGt.html  trait.CmpLt.html  trait.HAdd.html  trait.HSub.html  trait.MAdd.html  trait.Max.html  trait.Min.html  trait.Mulhi.html  trait.Mullo.html  trait.PackS.html  trait.PackUS.html  trait.Set1.html  trait.Shli.html  trait.Shri.html  trait.Sign.html  type.M16.html  type.M2.html  type.M32.html  type.M4.html  type.M8.html
simdop/arch/: index.html  sidebar-items.js  struct.X86.html
simdop/core/: index.html  sidebar-items.js  struct.Twice.html  trait.ElemTwice.html  trait.Half.html  (+3 more)
simdty/: struct.f32x16.html  struct.f32x2.html  struct.f32x32.html  struct.f32x4.html  struct.f32x64.html  struct.f32x8.html  struct.f64x16.html  struct.f64x2.html  struct.f64x32.html  struct.f64x4.html  struct.f64x64.html  struct.f64x8.html  struct.i16x16.html  struct.i16x2.html  struct.i16x32.html  struct.i16x4.html  struct.i16x64.html  struct.i16x8.html  struct.i32x16.html  struct.i32x2.html  struct.i32x32.html  struct.i32x4.html  struct.i32x64.html  struct.i32x8.html  struct.i64x16.html  struct.i64x2.html  struct.i64x32.html  struct.i64x4.html  struct.i64x64.html  struct.i64x8.html  struct.i8x16.html  struct.i8x2.html  struct.i8x32.html  struct.i8x4.html  struct.i8x64.html  struct.i8x8.html  struct.u16x16.html  struct.u16x2.html  struct.u16x32.html  struct.u16x4.html  (+20 more)
src/: lib.rs
(+46 files in other folders)
